add struct.go & update coba.go
